add cascation logo test

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
             <span class="divider20"></span>
 
-            <img src="images/f14.jpg" alt="">
+            <img src="images/CascationVenturesIncBlack.png" alt="">
 
         </div>
     </main>
