--- a/index.html
+++ b/index.html
@@ -226,9 +226,8 @@
 
             <img src="images/CascationVenturesIncBlack.png" alt="">
 
-            <h1 class="page-header">About Us</h1>
 
-            <p>Vestibulum tellus risus, pretium et facilisis nec, porta in felis. Nullam fermentum, lorem nec tincidunt tempus, lectus venenatis nisi, quis ultrices tortor arcu id diam. Nunc eros est, iaculis non quam et, mattis dignissim la Vivamus finibus id augue eu sagittis. Nam sapien nisi, auctor in vestibulum in, pulvinar vel nibh. Pellentesque malesuada sit amet nulla sit amet porttitor. Proin fringilla nulla ege.</p>
+            <p>Strategic advisory and venture development firm specializing in operational optimization, capital growth, and equity maximization. Cascation structures innovative, cross-sector deals to unlock long-term value across emerging and established markets.</p>
 
             <span class="divider20"></span>
 
@@ -295,7 +294,7 @@
 
             <span class="divider20"></span>
 
-            <p>Vestibulum tellus risus, pretium et facilisis nec, porta in felis. Nullam fermentum, lorem nec tincidunt tempus, lectus venenatis nisi, quis ultrices tortor arcu id diam. Nunc eros est, iaculis non quam et, mattis dignissim la Vivamus finibus id augue eu sagittis. Nam sapien nisi, auctor in vestibulum in, pulvinar vel nibh. Pellentesque malesuada sit amet nulla sit amet porttitor. Proin fringilla nulla ege.</p>
+            <p>We provide asset management, incubation, and ecosystem coordination services tailored to high-growth ventures and socially aligned enterprises.</p>
 
             <span class="divider20"></span>
 
