--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Uno</title>
+    <title>Cascation Ventures</title>
 
     <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -239,8 +239,8 @@
                         <img src="images/team1.jpg" alt="">
 
                         <div class="overlay">
-                            <span class="name">Frank Williams</span>
-                            <span class="title">Photographer</span>
+                            <span class="name">[REDACTED]</span>
+                            <span class="title">Executive Chairman</span>
                         </div>
 
                         <ul class="social-profiles">
@@ -258,8 +258,8 @@
                         <img src="images/team2.jpg" alt="">
 
                         <div class="overlay">
-                            <span class="name">John Doe</span>
-                            <span class="title">Editor</span>
+                            <span class="name">[REDACTED]</span>
+                            <span class="title">Managing Partner</span>
                         </div>
 
                         <ul class="social-profiles">
@@ -277,8 +277,8 @@
                         <img src="images/team3.jpg" alt="">
 
                         <div class="overlay">
-                            <span class="name">Adam Joe</span>
-                            <span class="title">Editor</span>
+                            <span class="name">[REDACTED]</span>
+                            <span class="title">Capital Portfolio Analist</span>
                         </div>
 
                         <ul class="social-profiles">
