--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <footer>
 
         <div class="copyrights">
-            <p>© Uno 2021 | Made by <a href="https://themeforest.net/user/codesymbol" target="_blank">CodeSymbol</a>.</p>
+            <p>© Cascation Ventures Inc. 2025</p>
         </div>
 
         <div class="social-links icons">
